kubes/django-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: support-django-test
  labels:
    app: support-test
    part: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: support-test
      part: django
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: support-test
        part: django
    spec:
      volumes:
        - name: static
          persistentVolumeClaim:
            claimName: support-django-test-static
        - name: media
          persistentVolumeClaim:
            claimName: support-django-test-media
      containers:
        - name: gunicorn
          image: as207960/support-django:(version)
          imagePullPolicy: Always
          command: ["gunicorn", "-w", "8", "-b", "[::]:8000", "--forwarded-allow-ips", "*", "--access-logfile", "-", "--timeout=90", "as207960_support.wsgi:application"]
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: "/app/static/"
              name: static
            - mountPath: "/app/media/"
              name: media
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: support-celery-test
  labels:
    app: support-test
    part: celery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: support-test
      part: celery
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: support-test
        part: celery
    spec:
      volumes:
        - name: static
          persistentVolumeClaim:
            claimName: support-django-test-static
        - name: media
          persistentVolumeClaim:
            claimName: support-django-test-media
      containers:
        - name: celery
          image: as207960/support-django:(version)
          imagePullPolicy: Always
          command: ["celery", "-A", "as207960_support", "worker", "--loglevel=INFO", "-c", "32"]
          volumeMounts:
            - mountPath: "/app/static/"
              name: static
            - mountPath: "/app/media/"
              name: media
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: support-test-django
spec:
  podSelector:
    matchLabels:
      app: support-test
      part: django
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: support-test
          part: nginx
    ports:
    - protocol: TCP
      port: 8000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: support-test-celery
spec:
  podSelector:
    matchLabels:
      app: support-test
      part: celery
  policyTypes:
  - Ingress
---
apiVersion: v1
kind: Service
metadata:
  name: support-django-test
  labels:
    app: support-test
    part: django
spec:
  selector:
    app: support-test
    part: django
  ports:
    - port: 8000
      targetPort: 8000
