kubes/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: support-django
  labels:
    app: support
    part: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: support
      part: django
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: support
        part: django
    spec:
      containers:
        - name: gunicorn
          image: as207960/support-django:(version)
          imagePullPolicy: Always
          command: ["gunicorn", "-w", "8", "-b", "[::]:8000", "--forwarded-allow-ips", "*", "--access-logfile", "-", "--timeout=90", "as207960_support.wsgi:application"]
          ports:
            - containerPort: 8000
          envFrom: *envFrom
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: support-celery
  labels:
    app: support
    part: celery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: support
      part: celery
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: support
        part: celery
    spec:
      containers:
        - name: celery
          image: as207960/support-django:(version)
          imagePullPolicy: Always
          command: ["celery", "-A", "as207960_support", "worker", "--loglevel=INFO", "-c", "32"]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: support-django
spec:
  podSelector:
    matchLabels:
      app: support
      part: django
  policyTypes:
  - Ingress
  ingress:
  - from:
      - namespaceSelector:
          matchLabels:
            app.kubernetes.io/name: ingress-nginx
        podSelector:
          matchLabels:
            app.kubernetes.io/name: ingress-nginx
    ports:
    - protocol: TCP
      port: 8000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: support-celery
spec:
  podSelector:
    matchLabels:
      app: support
      part: celery
  policyTypes:
  - Ingress
---
apiVersion: v1
kind: Service
metadata:
  name: support-django
  labels:
    app: support
    part: django
spec:
  selector:
    app: support
    part: django
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: support-ingress
  annotations:
    cert-manager.io/cluster-issuer: "gts"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - support.as207960.net
      secretName: support-tls
  rules:
    - host: support.as207960.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: support-django
                port:
                  number: 8000
