kubes/nginx-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: support-nginx-test
  labels:
    app: support-test
    part: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: support-test
      part: nginx
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: support-test
        part: nginx
    spec:
      volumes:
        - name: static
          persistentVolumeClaim:
            claimName: support-django-test-static
        - name: media
          persistentVolumeClaim:
            claimName: support-django-test-media
        - name: conf
          configMap:
            name: support-nginx-test-conf
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/data/static/"
              name: static
            - mountPath: "/data/media/"
              name: media
            - mountPath: "/etc/nginx/nginx.conf"
              name: conf
              subPath: "nginx.conf"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: support-test-nginx
spec:
  podSelector:
    matchLabels:
      app: support-test
      part: nginx
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
    ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: support-nginx-test
  labels:
    app: support-test
    part: nginx
spec:
  selector:
    app: support-test
    part: nginx
  ports:
    - port: 80
      targetPort: 80
      name: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: support-ingress-test
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
    - hosts:
        - support.test.as207960.net
      secretName: support-test-tls
  rules:
  - host: support.test.as207960.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: support-nginx-test
            port:
              number: 80
